z-index fixed

--- a/first_responsive_website.css
+++ b/first_responsive_website.css
@@ -135,6 +135,7 @@ html{
 /* Client Section */
 #client-section {
     position: relative;
+    z-index: -1;
 }
 
 #client-section::before {
